--- a/nx.json
+++ b/nx.json
@@ -33,6 +33,9 @@
     "app1-e2e": {
       "tags": [],
       "implicitDependencies": ["app1"]
+    },
+    "shared-components": {
+      "tags": []
     }
   }
 }
